chore: fix table overflowing mobile site

--- a/website/src/css/custom.css
+++ b/website/src/css/custom.css
@@ -6,5 +6,4 @@
 
 table {
   display: table;
-  width: 100%;
 }
